x/programs/rust/sdk-macros/tests/ui/fail/user-defined-context-type.stderr
error[E0308]: mismatched types
 --> tests/ui/fail/user-defined-context-type.rs:8:1
  |
8 | #[public]
  | ^^^^^^^^^
  | |
  | expected `wasmlanche_sdk::Context`, found `Context`
  | arguments to this function are incorrect
  |
  = note: `Context` and `wasmlanche_sdk::Context` have similar names, but are actually distinct types
note: `Context` is defined in the current crate
 --> tests/ui/fail/user-defined-context-type.rs:6:1
  |
6 | struct Context;
  | ^^^^^^^^^^^^^^
note: `wasmlanche_sdk::Context` is defined in crate `wasmlanche_sdk`
 --> $WORKSPACE/x/programs/rust/wasmlanche-sdk/src/context.rs
  |
  | pub struct Context {
  | ^^^^^^^^^^^^^^^^^^
note: function defined here
 --> tests/ui/fail/user-defined-context-type.rs:9:8
  |
8 | #[public]
  | ---------
9 | pub fn test(_: &mut Context) {}
  |        ^^^^
  = note: this error originates in the attribute macro `public` (in Nightly builds, run with -Z macro-backtrace for more info)
